#Revision history for {{ $dist->name }}

{{$NEXT}}
  [Documentation]
  - Bumped copyright year.

v1.2.2    2022-09-03 09:27:39+01:00 Europe/London
  [Documentation]
  - Fix encoding of links in README.

  [Other]
  - Fix issue with MANIFEST.SKIP.

  - Specify minimum version of Exporter.

  - Sign release.

v1.2.1    2021-09-22 16:32:07+01:00 Europe/London
  [Documentation]
  - Fixed typos in Changes.

  [Tests]
  - Add author test for unused vars.

v1.2.0    2021-04-19 16:29:19+01:00 Europe/London
  [Bug Fixes]
  - Fixed issue with newer versions of List::Util, fixes GH#15.

  [Enhancements]
  - Removed prerequisite of List::AllUtils.

v1.1.2    2021-03-13 12:17:00+00:00 Europe/London
  [Documentation]
  - Reorganised POD so that a the an issue with intermixed POD is
    properly in the KNOWN ISSUES section.

  - Bumped copyright year.

  [Other]
  - Add List::SomeUtils::XS to recommended prereqs.

v1.1.1    2020-12-17 15:51:58+00:00 Europe/London
  [Tests]
  - Specify minimum version of Sub::Identify.

v1.1.0    2020-12-17 13:42:01+00:00 Europe/London
  [Enhancements]
  - Subroutine constants are genuinely marked as subroutine constants.

  [Toolchain]
  - Removed `.travis.yml` from git repo.

v1.0.0    2020-12-11 13:56:43+00:00 Europe/London
  - No changes: version bumped because module is considered mature.

v0.4.2    2020-09-10 12:52:53+01:00 Europe/London
  [Documentation]
  - Added INSTALL file to the distribution.

  - Updated copyright year.

  [Toolchain]
  - Added keywords to distribution metadata.

  - Tweaks to dist.ini for simplifying build.

  - Include core modules in prerequisites.

v0.4.1    2018-05-08 16:14:23+01:00 Europe/London
  [Bug Fixes]
  - Use local variable for regex capture.

  [Enhancements]
  - Improve type checking.

v0.4.0    2018-05-02 20:42:40+01:00 Europe/London
  [Enhancements]
  - Enable strictures.

  - Simplified the enum generation code, and added the ability to
    specify a custom incrementing function.
