@@ -2,6 +2,8 @@
 
 {{$NEXT}}
   [Documentation]
+  - Document support policy for older Perl versions.
+
   - Bumped copyright year.
 
 v1.2.2    2022-09-03 09:27:39+01:00 Europe/London
